# qccb-v2

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  run_gui.py  test_basic.py  test_pqc_quick.py  test_simulator.py
Bauman/: snowdrop_4q_ver1.json  snowdrop_4q_ver2.json  snowdrop_8q_ver1.json
src/: __init__.py  comparative_analysis.py  cpu_features.py  crm_forecast.py  crm_metric.py  csv_preview.py  full_benchmark.py  gpu_simulator.py  gui.py  hndl_calculator.py  local_chip_emulator.py  pqc_avx2_comparison.py  pqc_benchmark.py  pqc_pipeline.py  pqc_simulator.py  quantum_hardware.py  quantum_resource_estimator.py  quantum_threat.py  report_generator.py  report_v2.py  scaling_demo.py  sci_calculator.py  sci_calculator_gui.py  sci_dynamic.py  sci_hardware.py  snowdrop_constraints.py  statistical_tests.py  thesis_tools_gui.py  tls_hybrid_handshake.py  ui_theme.py  utils.py  visualization.py
src/experiments/: __init__.py  bell_state.py  bernstein_vazirani.py  ghz_state.py  runner.py  shor_n15.py
src/experiments/_archived_v2_pdf/: bb84.py  grover_3q.py  shor_n15_pdf.py  vqf_n21.py
tools/: replot_charts.py  test_batch_api.py
